# rust2prod

./: Cargo.toml  Makefile  configuration.yaml
.cargo/: config.toml
.github/workflows/: tests.yml
scripts/: init_db.sh
src/: lib.rs  main.rs  startup.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
